# ai-automation-agents

./: README.md
project/: .gitignore  .vercelignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh  vercel.json
project/agents/: ai_mockup_agent.py  ai_rendering_agent.py  artwork_verification_agent.py  automated_followup_agent.py  base_agent.py  email_reply_agent.py  installation_qc_agent.py  installer_matching_agent.py  intake_classification_agent.py  photo_analysis_agent.py  po_automation_agent.py  storefront_search_agent.py  vendor_followup_agent.py
project/backend/: auth.py  data_source.py  main.py  mock_data.py  schemas.py
project/docs/: INTAKE_ROLLOUT.md  MANAGEMENT_SIGNOFF.md  PHASE1_SUPERVISOR.md  PHASE1_UAT.md  PHASE2.md  PHASE2_UAT.md  PHASE3.md  UAT_SIGNOFF_REPORT.md  plan.md
project/fixtures/: branded_email_demo.html  intake_email_preview.html
project/frontend/: .gitignore  README.md  auth.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
project/integrations/: classification_client.py  email_templates.py  email_text_cleaner.py  gmail_client.py  installer_matching.py  monday_client.py  monday_installer_client.py  monday_intake_client.py  monday_storefront_client.py  phase3_vision.py  salesforce_client.py  storefront_search.py  vision_verification.py
project/models/: agent_result.py  task.py
project/persistence/: __init__.py  database.py  migrate.py  repositories.py
project/scripts/: send_branded_email_demo.py  sync_salesforce_token_to_vercel.sh
(+127 files in other folders)
