[project]
name = "ai-automation-agents-api"
version = "1.0.0"
description = "Supervisor + agents FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "anthropic>=0.40",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.100",
  "google-auth-httplib2>=0.2",
  "requests>=2.31",
  "Pillow>=10.0",
  "psycopg[binary]>=3.2",
]

[tool.vercel]
entrypoint = "backend.main:app"
